Attempted to link to DB, Fixed issues - Routes.py 	- Redesigned student pages to include username 	- Redesigned question pages to be more like Mang's way 	- Added comments 	- Added basic role setting using email domain 	- Added better error message for role-less accounts - Added controllers.py from MangAPI - base.html = Fixed CSS not found issue on "deeper" URLs - Updated HTML to account for new routing functions

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -98,6 +98,6 @@ input[type="file"] {
     margin: 10px;
 }
 
-.hover-button:hover{
+/*.hover-button:hover{
     background: #b18d20 !important;
-}
+}*/
